# FastAPI-Kafka-Compose-integration

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
consumer/: Dockerfile  pyproject.toml
producer/: Dockerfile  producer.py  pyproject.toml  requirements.txt
producer/src/: producer.py
scripts/: create_cluster_id.sh
