[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Franek Suszko <franeksu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["cli", "kafka"], version = "^0.5.27"}
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
