[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Franek Suszko <franeksu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
faststream = "^0.5.27"
aiokafka = "^0.11.0"
uvicorn = "^0.32.0"
fastapi = "^0.115.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
